app/src/parser/coreth/snapshots/rslib__parser__coreth__native__tests__tx_eth_ui@eth_legacy_asset_deposit.json.snap
---
source: app/src/parser/coreth/native.rs
expression: reduced
input_file: app/src/parser/coreth/eth_testvectors/eth_legacy_asset_deposit.json
---
[
    "Deposit": "0 of",
    "AssetId": "verma4Pa9biWKbjDGNsTXU47cYCyDSNGSU1iBkxucfVSFVXdv",
    "To": "0x41c9cc6fd27e26e70f951869fb09da685a696f0a",
    "Maximum Fee": "47000000",
]
