app/src/parser/coreth/snapshots/rslib__parser__coreth__native__tests__tx_eth_ui@usdt_transfer.json.snap
---
source: app/src/parser/coreth/native.rs
expression: reduced
input_file: app/src/parser/coreth/eth_testvectors/usdt_transfer.json
---
[
    "ERC-20": "transfer",
    "To": "0xc59943ad9b699155bffbe553681e3f62795958f9",
    "Amount": "31800000000",
    "Contract": "0xdac17f958d2ee523a2206206994597c13d831ec7",
    "Maximun Fee(GWEI)": "333347.836625737",
]
